fixed responsive layout issues

--- a/src/css/App.css
+++ b/src/css/App.css
@@ -6,3 +6,8 @@
   display: flex;
   flex-direction: column;
 }
+@media (max-width:500px){
+ .main-content{
+  padding:2rem 1rem;
+ }
+}
