--- a/src/css/Home.css
+++ b/src/css/Home.css
@@ -50,7 +50,17 @@
 
   .search-form {
     margin-bottom: 1rem;
+    max-width: 300px;
+    /* margin-left: 1rem; */
+    padding: 0;
+    margin: 0;
   }
+  .search-button{
+    padding: 0.75rem 1rem;  
+  }
+ .search-input{
+  padding: 0.75rem 0.3rem;
+ }
 }
 
 .movies-grid {
